--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -37,8 +37,11 @@
             </ul>
           </li>
         </ul>
-        
-        <a class="nav-link link-light" aria-current="page" href="#"><strong>Log in</strong></a>
+        {% if user.is_authenticated %}
+        <a class="nav-link link-light" aria-current="page" href="{% url 'user:profile' %}"><strong>Profile</strong></a>
+        {% else %}
+        <a class="nav-link link-light" aria-current="page" href="{% url 'user:index' %}"><strong>Log in/Sign up</strong></a>
+        {% endif %}
       </div>
     </div>
   </nav>
