--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -7,20 +7,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
 
-    <title>Multiple user login</title>
+    <title>Login / Signup</title>
   </head>
-  <body>
+  <body class="purple-900">
     {% include "core/navbar.html" %}
     
-        <h1>Welcome</h1>
+    
+    <div class="d-flex justify-content-center align-items-center" style="height: 10vh;">
+      <h1 style="font-size: 60px;" class="text-light">Welcome</h1>
     </div>
-    <label>Log in if you already have registered!</label>
-    <div class="form-group last mb-4">
-        <div><button class="btn btn-pill text-white btn-block btn-primary"><a href="{% url 'user:login' %}">login</a></button></div>
-    </div>
-    <label>If not register here!</label>
-    <div class="form-group last mb-4">
-        <div><button class="btn btn-pill text-white btn-block btn-primary"><a href="{% url 'user:register' %}">register</a></button></div>
-    </div>
+
+    <div class="d-flex justify-content-center align-items-center" style="height: 10vh;"></div>
+      <p class="text-light text-center" style="font-size: 30px;">Welcome back! If you're new here, we're excited to have you join us!</p>
+  </div>
+
+      <div class="row">
+        <div class="d-flex justify-content-center gap-5 mt-4 flex-wrap">
+          <a href="{% url 'user:login_view' %}" 
+             class="btn cyan-400 d-flex justify-content-center align-items-center" 
+             style="width: 300px; height: 100px; font-size: 24px;">
+            Login
+          </a>       
+        
+          <a href="{% url 'user:register' %}" 
+             class="btn cyan-400 d-flex justify-content-center align-items-center" 
+             style="width: 300px; height: 100px; font-size: 24px;">
+            Join us!
+          </a>
+        </div>
+        
+
+        </div>
+      </div>
+    
+    
   </body>
 </html>
