--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -9,7 +9,7 @@
     {% include "core/navbar.html" %}
     <title>Multiple user login</title>
   </head>
-  <body>
+  <body class="purple-900">
   <div class="content">
     <div class="container">
       <div class="row justify-content-center">
@@ -18,42 +18,33 @@
             <div class="col-md-12">
               <div class="form-block">
                   <div class="mb-4">
-                      <h1>User Registration page</h1>
+                      <h1 style="size: 50px;" class="text-light">Join us and find more!</h1>
                 </div>
-                  <span class="mb-0 text-muted">
-                {% if msg %}
-                    {{ msg | safe }}
-                {% else %}
-                    Login page
-                {% endif %}
-              </span>
+                  
                 <form  method="post">
                     {% csrf_token %}
-                  <div class="form-group first">
-                    <label for="username">Username</label>
+                  <div class="form-group first mb-4">
+                    <label for="username" class="text-light">Username</label>
                       {{ form.username }}
                   </div>
-                  <div class="form-group first">
-                    <label for="email">Email</label>
+                  <div class="form-group first mb-4">
+                    <label for="email" class="text-light">Email</label>
                       {{ form.email}}
                   </div>
                   <div class="form-group last mb-4">
-                    <label for="password">Password</label>
+                    <label for="password" class="text-light">Password</label>
                       {{ form.password1 }}
                   </div>
                   <div class="form-group last mb-4">
-                    <label for="password">confirm Password</label>
+                    <label for="password" class="text-light">Confirm Password</label>
                       {{ form.password2 }}
                   </div>
-                  <div class="d-flex mb-5 align-items-center">
-                    <label class="control control--checkbox mb-0"><span class="caption">Admin</span>
-                        {{ form.is_admin }}
-                      <div class="control__indicator"></div>
-                    </label>
-                  </div>
-                    <span class="text-error">{{ form.errors }}</span>
+                  
+                    <span class="text-error text-light">{{ form.errors }}</span>
                   <input type="submit"  value="Register" class="btn btn-pill text-white btn-block btn-primary">
                 </form>
+
+
               </div>
             </div>
           </div>
