--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -1,4 +1,65 @@
-<form action="{% url 'user:logout' %}" method="post">
-    {% csrf_token %}
-    <button type="submit" class="btn btn-danger">Logout</button>
-</form>
+{% include "core/navbar.html" %}
+{% load static %}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Profile</title>  
+</head>
+<body class="purple-900">
+<div class="container text-center">
+    <div class="card green-200" aria-hidden="true">
+        <div class="card-header">
+            <h5>Profile</h5>
+        </div>
+        <img src="{% static 'core/images/placeholder1.png' %}" class="card-img-top mx-auto d-block" style="max-width: 200px;" alt="Avatar">
+
+        <div class="card-body">
+        <h5 class="card-title">{{ user.username }}</h5>
+        <p class="card-text">{{ user.email }}</p>
+
+        <p class="d-inline-flex gap-1">
+            <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+              Edit Profile
+            </a>
+          </p>
+          <div class="collapse" id="collapseExample">
+            <div class="card card-body">
+              <form method="POST">
+                {% csrf_token %}
+                <h5 class="card-title">Change Username</h5>
+                {{ username_form.as_p }}
+                <input type="submit" value="Change Username" class="btn btn-primary">
+              </form>
+  
+              <form method="POST" style="margin-top: 20px;">
+                {% csrf_token %}
+                <h5 class="card-title">Change Email</h5>
+                {{ email_form.as_p }}
+                <input type="submit" value="Change Email" class="btn btn-primary">
+              </form>
+
+              <form method="POST" style="margin-top: 20px;">
+                {% csrf_token %}
+                <h5 class="card-title">Change Password</h5>
+                {{ password_form.as_p }}
+                <input type="submit" value="Change Password" class="btn btn-primary">
+            </form>
+            
+
+            </div>
+          </div>
+
+        <form action="{% url 'user:logout' %}" method="post">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-danger">Logout</button>
+        </form>
+
+        </div>
+  </div>  
+</div>
+
+</body>
+</html>
