--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -12,7 +12,7 @@
         <nav class="navbar indigo-800 navbar-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="{% url 'core:home' %}">
-                <img src="{% static 'core/images/logo.png' %}" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+                <img src="{% static 'core/images/home.png' %}" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
                 C5 LML
               </a>
             </div>
