--- a/templates/user/other_profile.html
+++ b/templates/user/other_profile.html
@@ -16,13 +16,13 @@
         <div class="card-header">
             <h5>Profile</h5>
         </div>
-        <img src="{% if user.profile_image %}{{ user.profile_image.url }}{% else %}{% static 'core/images/default_avatar.png' %}{% endif %}" 
+        <img src="{% if other_user.profile_image %}{{ other_user.profile_image.url }}{% else %}{% static 'core/images/default_avatar.png' %}{% endif %}" 
      class="card-img-top mx-auto d-block" style="width: 150px; height: 150px;" alt="Avatar">
 
 
         <div class="card-body">
-        <h5 class="card-title">{{ user.username }}</h5>
-        <p class="card-text">{{ user.email }}</p>
+        <h5 class="card-title">{{ other_user.username }}</h5>
+        <p class="card-text">{{ other_user.email }}</p>
 
           <!-- Follow infomation -->
           <div class="d-flex justify-content-center gap-3 mb-3">
@@ -35,7 +35,7 @@
             </div>
             <div class="offcanvas-body">
 
-              {% for followee in user.get_followees %}
+              {% for followee in other_user.get_followees %}
 
               
               <div class="card mb-3" style="max-width: 540px;">
@@ -46,22 +46,12 @@
                     <img src="{% if followee.profile_image %}{{ followee.profile_image.url }}{% else %}{% static 'core/images/default_avatar.png' %}{% endif %}" 
                     class="img-fluid rounded-start" style="width: 150px; height: 150px;" alt="...">
                   </a>
-
+                  
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title">{{ followee.username }}</h5>
                       <p class="card-text">{{ followee.email }}</p>
-                      
-          <form method="POST" action="{% url 'user:toggle_follow' followee.id %}">
-            {% csrf_token %}
-            {% if followee in user.get_followees %}
-              <button class="btn cyan-500" type="submit">Unfollow</button>
-            {% else %}
-              <button class="btn cyan-500" type="submit">Follow</button>
-            {% endif %}
-          </form>
-        
                     </div>
                   </div>
                 </div>
@@ -84,7 +74,7 @@
             </div>
             <div class="offcanvas-body">
               
-              {% for follower in user.get_followers %}
+              {% for follower in other_user.get_followers %}
 
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
@@ -100,16 +90,6 @@
                     <div class="card-body">
                       <h5 class="card-title">{{ follower.username }}</h5>
                       <p class="card-text">{{ follower.email }}</p>
-
-                      <form method="POST" action="{% url 'user:toggle_follow' follower.id %}">
-                        {% csrf_token %}
-                        {% if follower in user.get_followees %}
-                          <button class="btn cyan-500" type="submit">Unfollow</button>
-                        {% else %}
-                          <button class="btn cyan-500" type="submit">Follow</button>
-                        {% endif %}
-                      </form>
-
                     </div>
                   </div>
                 </div>
@@ -122,53 +102,20 @@
           </div>
 
 
-        <!-- Edit profile toggle section -->
         <p class="d-inline-flex gap-1">
-            <a class="btn cyan-700" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-              Edit Profile
-            </a>
-          </p>
-          <div class="collapse" id="collapseExample">
-            <div class="card card-body green-200">
-
-              <form method="POST" enctype="multipart/form-data" style="margin-top: 20px;">
-                {% csrf_token %}
-                <h5 class="card-title">Change Profile Image</h5>
-                {{ image_form.as_p }}
-                <input type="submit" name="change_image" value="Upload Image" class="btn orange-700">
-              </form>
-              
-
-              <form method="POST">
-                {% csrf_token %}
-                <h5 class="card-title">Change Username</h5>
-                {{ username_form.as_p }}
-                <input type="submit" name="change_username" value="Change Username" class="btn orange-700">
-              </form>
-  
-              <form method="POST" style="margin-top: 20px;">
-                {% csrf_token %}
-                <h5 class="card-title">Change Email</h5>
-                {{ email_form.as_p }}
-                <input type="submit" name="change_email" value="Change Email" class="btn orange-700">
-              </form>
-
-              <form method="POST" style="margin-top: 20px;">
-                {% csrf_token %}
-                <h5 class="card-title">Change Password</h5>
-                {{ password_form.as_p }}
-                <input type="submit" name="change_password" value="Change Password" class="btn orange-700">
-            </form>
-            
-
-            </div>
-          </div>
-
-          <!-- Logout Button -->
-        <form action="{% url 'user:logout' %}" method="post">
+          {% if user.is_authenticated and user != other_user %}
+          <form method="POST" action="{% url 'user:toggle_follow' other_user.id %}">
             {% csrf_token %}
-            <button type="submit" class="btn btn-danger">Logout</button>
-        </form>
+            {% if other_user in user.get_followees %}
+              <button class="btn cyan-500" type="submit">Unfollow</button>
+            {% else %}
+              <button class="btn cyan-500" type="submit">Follow</button>
+            {% endif %}
+          </form>
+        {% endif %}
+          </p>
+
+        
 
         </div>
   </div>  
