Link the user system with the forum, post, comment system

--- a/templates/core/detail.html
+++ b/templates/core/detail.html
@@ -10,17 +10,19 @@
 
           <h5 >The C5 LML Game Forum is a community-driven platform designed for gamers to access game rankings, detailed game profiles, and engage in interactive discussions. This application serves as a central hub for gamers to discover information, share strategies, and connect with fellow players. By integrating features such as game rankings, detailed profiles, and interactive forums, this platform aims to enhance the gaming experience through community interaction and information sharing.</h5>
         
-          <h2>Team members:</h2>
+          <h2>Team members (In alphabetical order):</h2>
          <ul>
-           <li>Liu, Haichen</li>
+           <li>Liu Chenhe</li>
+           <li>Liu Haichen</li>
            <li>Mai Ho San</li>
-           <li>Liu, Chenhe</li>
           </ul>
 
 <div class="card text-bg-light mb-3" style="max-width: 18rem;">
   <div class="card-header">Contact us</div>
   <div class="card-body">
-    <p class="card-text">1155194812@link.cuhk.edu.hk (Mr.Mai)</p>
+    <p class="card-text">trevor_chenhe_liu@foxmail.com (Mr.Liu Chenhe)</p>
+    <p class="card-text">2472201534@qq.com (Mr.Liu Haichen)</p>
+    <p class="card-text">1155194812@link.cuhk.edu.hk (Mr.Mai Ho San)</p>
   </div>
 </div>
 
