--- a/templates/forum/new_game.html
+++ b/templates/forum/new_game.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Forum categories | C5 LML Game Forum</title>
+  <title>New Game | C5 LML Game Forum</title>
 </head>
 <body>
   {% include "core/navbar.html" %}
@@ -12,7 +12,7 @@
           {% csrf_token %}
           {{ form.as_p }}
     
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn cyan-700">Submit</button>
         </form>
       </div>
 </body>
