--- a/templates/forum/all_games.html
+++ b/templates/forum/all_games.html
@@ -13,7 +13,9 @@
           {% for game in games %}
             <div class="col-md-4 mb-4">
               <div class="card" style="width: 100%;">
+                <a href="{% url 'forum:forum' game.id %}">
                 <img src="{{ game.key_art.url }}" class="card-img-top" alt="...">
+              </a>
                 <div class="card-body">
                   <h5 class="card-title">{{ game.name }}</h5>
                   <p class="card-text">{{ game.description|truncatewords:20 }}</p>
