fix the comments count display

--- a/templates/forum/post_detail.html
+++ b/templates/forum/post_detail.html
@@ -52,7 +52,7 @@
 
     <div class="card mb-4">
         <div class="card-header">
-            <h3 class="h6 mb-0">Comments ({{ post.comment_set.count }}) </h3>
+            <h3 class="h6 mb-0">Comments ({{ post.comments.count }}) </h3>
         </div>
         <div class="card-body">
             <div class="comments">
